--- a/src/pages/docs/java/[...slug].astro
+++ b/src/pages/docs/java/[...slug].astro
@@ -3,7 +3,7 @@ import { getCollection } from 'astro:content';
 import MarkdownPostLayout from '../../../layouts/MarkdownPostLayout.astro';
 
 export async function getStaticPaths() {
-  const javaEntries = await getCollection('java');
+  const javaEntries = await getCollection('java').catch(() => []);
   return javaEntries.map(entry => ({
     params: { slug: entry.slug}, props: { entry },
   }));
