--- a/src/pages/docs/javascript/[...slug].astro
+++ b/src/pages/docs/javascript/[...slug].astro
@@ -3,7 +3,7 @@ import { getCollection } from 'astro:content';
 import MarkdownPostLayout from '../../../layouts/MarkdownPostLayout.astro';
 
 export async function getStaticPaths() {
-  const javascriptEntries = await getCollection('javascript');
+  const javascriptEntries = await getCollection('javascript').catch(() => []);
   return javascriptEntries.map(entry => ({
     params: { slug: entry.slug}, props: { entry },
   }));
