--- a/src/pages/docs/mongodb/[...slug].astro
+++ b/src/pages/docs/mongodb/[...slug].astro
@@ -3,7 +3,7 @@ import { getCollection } from 'astro:content';
 import MarkdownPostLayout from '../../../layouts/MarkdownPostLayout.astro';
 
 export async function getStaticPaths() {
-  const mongodbEntries = await getCollection('mongodb');
+  const mongodbEntries = await getCollection('mongodb').catch(() => []);
   return mongodbEntries.map(entry => ({
     params: { slug: entry.slug}, props: { entry },
   }));
